<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Continental OBD</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_codes" translatable="false">Clear Codes</string>
    <string name="notification_action">Tap to open OBD-Reader</string>
    <string name="command_list">Choose a command</string>
    <string name="service_starting">Starting OBD connection..</string>
    <string name="service_started">OBD connection has started.</string>
    <string name="service_stopped">OBD connection has stopped.</string>
    <string name="notification_label">Tap to open OBD application.</string>
    <string name="title_activity_trouble_codes">Trouble Codes</string>
    <string name="pref_upload_category_title">Data Upload</string>
    <string name="pref_upload_category" translatable="false">upload_category</string>
    <string name="title_activity_trips_list">TripsList</string>
    <string name="menu_trip_list">Trips</string>
    <string name="menu_item_trip_delete">Delete</string>
    <string name="pref_gps_category" translatable="false">gps_category</string>
    <string name="dialog_loading_title">Loading…</string>
    <string name="dialog_loading_body">Loading application View, please wait…</string>
    <string name="menu_start_live_data">Start</string>
    <string name="menu_stop_live_data">Stop</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_get_dtc">DTC</string>
    <string name="text_gps" translatable="false">GPS</string>
    <string name="text_obd" translatable="false">OBD</string>
    <string name="text_bluetooth" translatable="false">Bluetooth</string>
    <string name="text_orientation_default" translatable="false">N</string>
    <string name="text_zero" translatable="false">0</string>
    <string name="text_consumption_default" translatable="false">0l/100km</string>
    <string name="text_runtime_default" translatable="false">00:00:00</string>
    <string name="title_pref_obd"></string>
    <string name="title_pref_commands"></string>
    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="text_no_bluetooth_id">Device doesn\'t support Bluetooth</string>
    <string name="text_bluetooth_disabled">Bluetooth disabled.</string>
    <string name="text_bluetooth_nodevice">No Bluetooth device selected</string>
    <string name="text_bluetooth_error_connecting">Cannot connect to bluetooth device!</string>
    <string name="text_no_orientation_sensor">Orientation sensor missing?</string>
    <string name="text_no_gps_support">Device doesn\'t support or has disabled GPS.</string>
    <string name="text_save_trip_not_available">Trip will not be saved.</string>
    <string name="text_obd_command_failure">OBD command failure!</string>
    <string name="text_dtc_no_data">No DTC</string>
    <string name="status_no_bluetooth_id">unavailable</string>
    <string name="status_bluetooth_disabled">disabled</string>
    <string name="status_bluetooth_ok">ready</string>
    <string name="status_bluetooth_connecting">connecting&#8230;</string>
    <string name="status_bluetooth_connected">connected</string>
    <string name="status_bluetooth_error_connecting">connection failed</string>
    <string name="status_gps_fix">fix acquired</string>
    <string name="status_gps_no_fix">fix not acquired</string>
    <string name="status_gps_started">started</string>
    <string name="status_gps_stopped">stopped</string>
    <string name="status_gps_ready">ready</string>
    <string name="status_gps_no_support">not available</string>
    <string name="status_gps_not_used">not used</string>
    <string name="status_obd_ready">OK</string>
    <string name="status_obd_data">receiving data&#8230;</string>
    <string name="status_obd_disconnected">disconnected</string>
    <string name="status_obd_no_support" translatable="false">NA</string>
    <string name="pref_upload_title" translatable="false">Enable Data Upload</string>
    <string name="pref_upload_summaryOff" translatable="false">Enable http data upload</string>
    <string name="pref_upload_summaryOn" translatable="false">Disable http data upload</string>
    <string name="pref_upload_url_title" translatable="false">Upload URL</string>
    <string name="pref_upload_url_summary" translatable="false">POST URL that will accept real-time data</string>
    <string name="pref_vehicle_id_title" translatable="false">Vehicle ID</string>
    <string name="pref_vehicle_id_summary" translatable="false">Optional unique id of this vehicle, used with uploaded data</string>
    <string name="pref_bluetooth_title" translatable="false">Enable Bluetooth</string>
    <string name="pref_bluetooth_summaryOff" translatable="false">Turn on Bluetooth</string>
    <string name="pref_bluetooth_summaryOn" translatable="false">Turn off Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary" translatable="false">List of paired bluetooth devices.</string>
    <string name="pref_bluetooth_list_devices_title" translatable="false">Bluetooth Devices</string>
    <string name="pref_gps_category_title" translatable="false">Enable GPS</string>
    <string name="pref_gps_category_summaryOff" translatable="false">Turn on GPS</string>
    <string name="pref_gps_category_summaryOn" translatable="false">Turn off GPS</string>
    <string name="pref_gps_update_period_title" translatable="false"></string>
    <string name="pref_gps_update_period_summary" translatable="false"></string>
    <string name="pref_gps_distance_period_title" translatable="false"></string>
    <string name="pref_gps_distance_period_summary" translatable="false"></string>
    <string name="pref_obd_protocols_title" translatable="false"></string>
    <string name="pref_obd_protocols_summary" translatable="false"></string>
    <string name="pref_imperial_units_title" translatable="false">Imperial Units</string>
    <string name="pref_imperial_units_summaryOff" translatable="false">Enable imperial units</string>
    <string name="pref_imperial_units_summaryOn" translatable="false">Go back to metric units</string>
    <string name="pref_obd_update_period_title" translatable="false"></string>
    <string name="pref_obd_update_period_summary" translatable="false"></string>
    <string name="pref_max_fuel_econ_title" translatable="false"></string>
    <string name="pref_max_fuel_econ_summary" translatable="false"></string>
    <string name="pref_volumetric_efficiency_dialog_title" translatable="false"></string>
    <string name="pref_volumetric_efficiency_summary" translatable="false"></string>
    <string name="pref_volumetric_efficiency_title" translatable="false"></string>
    <string name="pref_engine_displacement_title" translatable="false"></string>
    <string name="pref_engine_displacement_summary" translatable="false"></string>
    <string name="pref_reader_config_title" translatable="false">Reader Config Commands</string>
    <string name="pref_reader_config_summary" translatable="false">Commands to configure bluetooth reader, separate with new line</string>
    <string name="title_pref_commands_summary" translatable="false"></string>
    <string name="title_pref_commands_title" translatable="false"></string>
    <string name="title_pref_full_logging" translatable="false"> Full logging configuration </string>
    <string name="pref_enable_full_logging_summary" translatable="false"> Enables full offline logging with upload</string>
    <string name="pref_enable_full_logging_title" translatable="false"> Enable full logging </string>
    <string name="default_dirname_full_logging" translatable="false">OBDReaderLogs</string>
    <string name="pref_dirname_dialogTitle" translatable="false">Choose the name of the directory to save the logs</string>
    <string name="pref_dirname_title" translatable="false">Directory name</string>
    <string name="pref_dirname_summary" translatable="false">Name of the directory where to save the files</string>
    <string name="pref_dev_email_title" translatable="false">Developer Email</string>
    <string name="pref_dev_email_summary" translatable="false">Logs will be emailed to this address</string>
    <string name="text_noerrors" translatable="false">There were no errors found.!</string>
</resources>
