<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vehicle_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abc_input_method_navigation_guard"
    android:orientation="vertical">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:tag="SPEED"
            android:text="@string/text_zero"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:textSize="@dimen/abc_text_size_display_3_material" />

        <TextView
            android:id="@+id/compass_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/text_orientation_default"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:textSize="@dimen/abc_text_size_display_3_material" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="ENGINE_RPM"
            android:text="0"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:textSize="45sp" />

    </TableRow>

    <ScrollView
        android:id="@+id/data_scroll"
        android:layout_width="366dp"
        android:layout_height="201dp"
        android:layout_gravity="top"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:elevation="2dp"
        android:outlineProvider="bounds">

        <TableLayout
            android:id="@+id/data_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"></TableLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_weight="1"
        android:gravity="center"
        android:tag="ENGINE_RUNTIME"
        android:text="@string/text_runtime_default"
        android:textColor="@color/bright_foreground_inverse_material_light"
        android:textSize="18sp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/text_gps"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_bluetooth"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:textSize="@dimen/abc_text_size_headline_material" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/text_obd"
            android:textSize="@dimen/abc_text_size_medium_material" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/GPS_POS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:text="" />

        <TextView
            android:id="@+id/BT_STATUS"
            android:layout_width="0dp"
            android:layout_height="@dimen/abc_action_button_min_width_overflow_material"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/OBD_STATUS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:text="" />
    </TableRow>

</LinearLayout>
